--- a/contact_us.html
+++ b/contact_us.html
@@ -8,23 +8,27 @@
   @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
 
   html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
     background: url('https://gcdnb.pbrd.co/images/ZkCX8Y8SExuR.jpg?o=1') no-repeat center center fixed;
     background-size: cover;
+    color: #00bcd4;
     font-family: 'Orbitron', sans-serif;
-    text-align: center;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   h1 {
     font-size: 3em;
-    margin-top: 50px;
     margin-bottom: 20px;
     color: #00bcd4;
     text-shadow: 0 0 15px #00bcd4;
     z-index: 2;
-    position: relative;
   }
 
   textarea {
@@ -32,7 +36,7 @@
     max-width: 500px;
     height: 150px;
     margin-bottom: 20px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.6); /* semi-transparent */
     color: #00bcd4;
     border: 3px solid #00bcd4;
     border-radius: 10px;
@@ -40,7 +44,6 @@
     font-size: 1em;
     resize: none;
     z-index: 2;
-    position: relative;
     box-shadow: 0 0 15px #00bcd4;
   }
 
@@ -55,7 +58,6 @@
     box-shadow: 0 0 10px #00bcd4;
     transition: background 0.5s;
     z-index: 2;
-    position: relative;
   }
 
   button:hover {
@@ -68,11 +70,10 @@
     color: #00e5ff;
     display: none;
     z-index: 2;
-    position: relative;
   }
 
   #particles {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -165,7 +166,7 @@
 
   function animateParticles() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = "rgba(0, 188, 212, 0.6)";
+    ctx.fillStyle = "rgba(0, 188, 212, 0.6)"; // darker blue particles
 
     for (let p of particles) {
       ctx.beginPath();
