--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </div>
 
 <!-- Contact Us, Form, Discord buttons -->
-<button class="btn" onclick="window.open('Jacksonplayzskibidiriss.github.io/contact_us', '_blank')">Contact Us</button>
+<button class="btn" onclick="window.open('jacksonplayzskibidiriss.github.io/contact_us', '_blank')">Contact Us</button>
 <button class="btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeb9XVfSdocm_9KNjwkXoBXVzD5O1Xb796vlZfE7_4wi7PnNw/viewform?embedded=true', '_blank')">Form</button>
 <button class="btn" onclick="window.open('https://discord.gg/xFMpuKBFr8', '_blank')">Join Our Discord</button>
 
